<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PdfTranslator</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="buttonMenuBrowsePdf">Browse Sistem </string>
    <string name="buttonMenuReadCurrentFile">Continue with current file</string>
    <string name="buttonViewDictionary">View dictionary</string>
    <string name="buttonMenuExercise">Exercise vocabulary</string>
    <string name="buttonSetWidge">Set quote Widget</string>
    <string name="buttonChoosePdfFile">Choose an EBook</string>
    <string name="buttonBackBrowser">Back</string>
    <string name="buttonCancelBrowser">Cancel</string>
    <string name="dialogBrowserTitle">Choose a file</string>
    <string name="dialogBrowuserFinished">Done</string>
    <string name="action_previous">Previous</string>
    <string name="action_next">Next</string>
    <string name="action_finish">Finish</string>
    <string name="title_activity_file_browser">FileBrowser</string>
    <string name="title_activity_browser">Browser</string>
    <string name="title_action_bar_pagesId">Pages</string>
    <string name="title_next_pages">Next</string>
    <string name="title_previous_pages">Previous</string>
    <string name="title_other_books">Other books</string>
    <string name="title_name_current_book_dictionary">Current book</string>
    <string name="textViewNoPreview">No Preview</string>
    <string name="buttonStartReadin">Open this file</string>
    <string name="search_hint">Search for pdf files</string>
    <string name="action_search">Search</string>
    <string name="action_back">Back</string>
    <string name="CellTranslation">&#8226;   Traslated</string>
    <string name="CellDefinition">&#8226;   Definition</string>
    <string name="CellExample">&#8226;   Example</string>
    <string name="CellPartSpeech">&#8226;   Part of speech</string>
    <string name="dialogSelectBookPage">Select a book and a page for filter</string>
    <string name="dialogSelectBookButtonPositive">Show dictionary</string>
    <string name="dialogSelectBookButtonNeutral">Cancel</string>



    <string name="title_activity_activity_text_displayer">TextDisplayer</string>
    <string name="title_activity_activity_dictionary">Dictionary</string>
    <string name="verb">Verbs</string>
    <string name="noun">Nouns</string>
    <string name="adjective">Adjectives</string>
    <string name="adverb">Adverbs</string>
    <string name="settingsSelectBook">Choose other book</string>
    <string name="settingsDecidePages">Go to page</string>
    <string name="settingsSearchWord">Search a word</string>
    <string name="settingsSeeDictionary">See dictionary</string>
    <string name="buttonPreview">Preview</string>
    <string name="title_activity_exercise_slider">Exercises</string>
    
    
    <string name="exercise_cell_word">Word exercised</string>
    <string name="exercise_cell_definition">Word Definition</string>
    <string name="exercise_cell_example">Word Example</string>
    <string name="exercise_cell_language">Language to be translated to</string>
    <string name="exercise_cell_partOfSpeech"> Part of speech</string>
    <string name="exercise_cell_translation"> Your translation</string>


</resources>
